--- a/Src/MarkdownDeepEditor/Resources/PrevalueEditor/style.css
+++ b/Src/MarkdownDeepEditor/Resources/PrevalueEditor/style.css
@@ -1,11 +1,13 @@
-﻿.clearfix:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0;}
-.clearfix{display:inline-block;}
-html[xmlns] .clearfix{display:block;}
-* html .clearfix{height:1%;}
-.settings{}
-.settings .row	{ margin:8px 0; }
-.settings .label	{float:left;width:120px;margin-right:10px;}
-.settings .field	{float:left;}
+﻿.clearfix:after		{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0;}
+.clearfix			{display:inline-block;}
+html[xmlns] .clearfix	{display:block;}
+* html .clearfix		{height:1%;}
+.settings {}
+.settings fieldset		{ margin:10px 10px 20px; border:1px solid #999; border-radius:6px; }
+.settings legend		{ font-weight:bold; }
+.settings .row			{ margin:8px 0; }
+.settings .label		{float:left; width:120px; margin-right:10px; margin-top:4px; }
+.settings .field		{float:left;}
 .settings .description	{clear:left;color:#666;float:left;font-style:italic;margin:3px 0 10px 130px;}
 .settings .description a		{border-bottom:1px dotted #666;color:#666;text-decoration:none;}
 .settings .description a:hover	{border-bottom:1px dotted #630;color:#630;}
